Creado mediante Colaboratory

--- a/01_Introducción_a_Python_y_Jupyter_Notebook.ipynb
+++ b/01_Introducción_a_Python_y_Jupyter_Notebook.ipynb
@@ -40,15 +40,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zabFP2SgImuW"
-      },
-      "source": [
-        "# Introducción a Python y Jupyter Notebook"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "vFiey9hmImuW"
       },
       "source": [
@@ -129,7 +120,7 @@
         "import keyword\n",
         "keyword.kwlist"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -189,7 +180,7 @@
       "source": [
         "len(keyword.kwlist)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -440,6 +431,63 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yvWfSSj_-KTD",
+        "outputId": "9508b715-224f-46d1-ff91-1e9c8b17dbec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "l2= range(5,10)\n",
+        "l2"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "range(5, 10)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tGIOGnGl-Rb1",
+        "outputId": "147d4608-2972-4534-ff07-b8d5270d19bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "for i in l2:\n",
+        "  print(i)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Lzc8CYjEImuX"
@@ -628,7 +676,7 @@
         "id": "6wgiMvlXImuY"
       },
       "source": [
-        "### Funciones sin nombre (funciones lambda)\n",
+        "## Funciones sin nombre (funciones lambda)\n",
         "\n",
         "En Python podemos también crear funciones sin nombre, usando la palabra clave `lambda`:"
       ]
@@ -666,7 +714,7 @@
       "source": [
         "import math"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -677,7 +725,7 @@
       "source": [
         "math?"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -709,7 +757,7 @@
         "\n",
         "print(x)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -773,7 +821,7 @@
         "\n",
         "print(y)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -782,171 +830,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mn562DDYImuY"
-      },
-      "source": [
-        "## Numpy\n",
-        "\n",
-        "La librería Numpy nos permite usar funciones matemáticas de vectores y matrices. Está implementada en C y Fortran, por lo que este tipo de operaciones tiene un rendimiento muy bueno. A diferencia de las listas (una matriz, podría ser una lista anidada) para las que su comportamiento es dinámico, los arreglos de numpy son estáticos y homogeneos, lo que los vuelve muy eficientes en el uso de la memoria."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "s_ZlyMRuImuY"
-      },
-      "source": [
-        "import numpy as np\n",
-        "M1 = np.array([[1,2],[3,4]])\n",
-        "M1"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LyAiyGvBImuY"
-      },
-      "source": [
-        "type(M)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "v1jU5gUvImuY"
-      },
-      "source": [
-        "M2 = np.random.rand(4,3)\n",
-        "M2"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gLRVcaG-ImuY"
-      },
-      "source": [
-        "M2[1]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Hfjuaw2IImuY"
-      },
-      "source": [
-        "M2[1,:] #fila 1"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WJKJiBJiImuY"
-      },
-      "source": [
-        "M2[:,1] # columna 1"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kN-87dVcImuY"
-      },
-      "source": [
-        "vector = np.arange(0,3)\n",
-        "vector"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WeSa2NqVImuY"
-      },
-      "source": [
-        "2 * vector"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "asOa3OGrImuY"
-      },
-      "source": [
-        "A = vector*M\n",
-        "A"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZVnzFx7mImuY"
-      },
-      "source": [
-        "A + 5"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "tqBRrZslImuY"
-      },
-      "source": [
-        "A * A"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "IWNdIGgnImuY"
-      },
-      "source": [
-        "A.shape"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "zFzGT6fVImuY"
-      },
-      "source": [
-        "### Referencias\n",
-        "\n",
-        "Rubilar, Guillermo. Introducción a la Computación Científica con Python. Jupyter Notebook, 2019. https://github.com/gfrubi/TP17.\n",
-        "\n",
-        "\n",
-        "Python, Real. «Jupyter Notebook: An Introduction – Real Python». Accedido 26 de marzo de 2020. https://realpython.com/jupyter-notebook-introduction/.\n",
-        "\n",
-        "Nieto, Alberto. «Five Tips To Get You Started With Jupyter Notebook». ArcGIS Blog (blog), 30 de junio de 2017. https://www.esri.com/arcgis-blog/products/analytics/analytics/five-tips-to-get-you-started-with-jupyter-notebook/.\n",
-        "\n"
       ]
     }
   ]
