Creado mediante Colaboratory

--- a/01_Introducción_a_Python_y_Jupyter_Notebook.ipynb
+++ b/01_Introducción_a_Python_y_Jupyter_Notebook.ipynb
@@ -434,16 +434,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "yvWfSSj_-KTD",
-        "outputId": "9508b715-224f-46d1-ff91-1e9c8b17dbec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9508b715-224f-46d1-ff91-1e9c8b17dbec"
       },
       "source": [
         "l2= range(5,10)\n",
         "l2"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -463,16 +463,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "tGIOGnGl-Rb1",
-        "outputId": "147d4608-2972-4534-ff07-b8d5270d19bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "147d4608-2972-4534-ff07-b8d5270d19bd"
       },
       "source": [
         "for i in l2:\n",
         "  print(i)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -585,6 +585,161 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8aZeRnlT3_4Q"
+      },
+      "source": [
+        "## Diccionarios"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "98UYBMDc38EK",
+        "outputId": "c9b94e9a-4aeb-4905-e157-93080da62c24"
+      },
+      "source": [
+        "miDiccionario = {\"A\": \"Árbol\", \"B\":\"Barro\", \"C\":\"Cielo\"}\n",
+        "miDiccionario"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'A': 'Árbol', 'B': 'Barro', 'C': 'Cielo'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "auBu8fvM4zWi",
+        "outputId": "59dedb98-fb14-4c95-8f1d-12d0e98acfa3"
+      },
+      "source": [
+        "miDiccionario.keys()"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys(['A', 'B', 'C'])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pQeisVFs47vh",
+        "outputId": "ea6e0c4e-59f9-4478-d914-a307efad1def"
+      },
+      "source": [
+        "miDiccionario.values()"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values(['Árbol', 'Barro', 'Cielo'])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "XPMUb-QV4wJU",
+        "outputId": "1d841b05-9429-4699-d837-01538d01ce96"
+      },
+      "source": [
+        "miDiccionario[\"A\"]"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Árbol'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1r1nU8Oj5AHy",
+        "outputId": "1c26c924-bb5c-4209-8f78-9bd267b1c507"
+      },
+      "source": [
+        "miDiccionario[\"D\"]=\"Dado\"\n",
+        "miDiccionario"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'A': 'Árbol', 'B': 'Barro', 'C': 'Cielo', 'D': 'Dado'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
