Creado mediante Colaboratory

--- a/Semana 5/Clasificador_Naive_Bayes,_artículos_TDS_TheStartup.ipynb
+++ b/Semana 5/Clasificador_Naive_Bayes,_artículos_TDS_TheStartup.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1fZKfMPIIp31ULXvjQLHBfyaAEtPVqEg-",
-      "authorship_tag": "ABX9TyPIZHkHMOHbeNva2tJNR4/o",
+      "authorship_tag": "ABX9TyNEJTl8uc1SjxPi0Ly1ZEAQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AnIsAsPe/Fundamentos-tecnicos-y-aplicaciones-ML/blob/main/Clasificador_Naive_Bayes%2C_art%C3%ADculos_TDS_TheStartup.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AnIsAsPe/Fundamentos-tecnicos-y-aplicaciones-ML/blob/main/Semana%205/Clasificador_Naive_Bayes%2C_art%C3%ADculos_TDS_TheStartup.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -66,7 +66,7 @@
         "import matplotlib.pyplot as plt        #Para graficar y visualizar\r\n",
         "import seaborn as sns"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,15 +92,15 @@
       },
       "source": [
         "#leemos el conjunto de datos de los articulos de Towards Data Science\r\n",
-        "df_tds = pd.read_csv('/content/drive/MyDrive/Datos/Scraping/TowardsDataScience_articulos_muestra_2020.csv',\r\n",
-        "                 usecols=['titulo', 'subtitulo',])\r\n",
+        "df_tds = pd.read_csv('https://raw.githubusercontent.com/AnIsAsPe/Fundamentos-tecnicos-y-aplicaciones-ML/main/Datos/TowardsDataScience_articulos_muestra_2020.csv',\r\n",
+        "                     usecols=['titulo', 'subtitulo',])\r\n",
         "\r\n",
         "#¿cuántos renglones y cuántas columnas tienen el conjunto de datos?\r\n",
         "print(df_tds.shape) \r\n",
         "\r\n",
         "df_tds.head(3)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,15 +181,15 @@
       },
       "source": [
         "#leemos el conjunto de datos de los articulos de The Startup\r\n",
-        "df_startup = pd.read_csv('/content/drive/MyDrive/Datos/Scraping/TheStartup_articulos_muestra_2020.csv',\r\n",
-        "                 usecols=[ 'titulo', 'subtitulo'])\r\n",
+        "df_startup = pd.read_csv('https://github.com/AnIsAsPe/Fundamentos-tecnicos-y-aplicaciones-ML/blob/main/Datos/TheStartup_articulos_muestra_2020.csv',\r\n",
+        "                         usecols=[ 'titulo', 'subtitulo'])\r\n",
         "\r\n",
         "#¿cuántos renglones y cuántas columnas tienen el conjunto de datos?\r\n",
         "print(df_startup.shape) \r\n",
         "\r\n",
         "df_startup.head(3)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,7 +276,7 @@
         "print(datos.shape)\r\n",
         "datos.head()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,7 +378,7 @@
       "source": [
         "datos.tail()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -473,7 +473,7 @@
       "source": [
         "datos.sample(30)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -763,7 +763,7 @@
         "datos = datos.drop(['titulo','subtitulo'], axis=1)\r\n",
         "datos.head(3)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -867,7 +867,7 @@
         "  \n",
         "  return(texto)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -882,7 +882,7 @@
       "source": [
         "datos['descripcion'].str.len().describe()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -922,7 +922,7 @@
         "desc_max = datos.loc[idx,'descripcion']\r\n",
         "desc_max"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -954,7 +954,7 @@
       "source": [
         "preprocesar(desc_max)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -990,7 +990,7 @@
       "source": [
         "datos['descripcion_pp'] = datos['descripcion'].apply(preprocesar)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1006,7 +1006,7 @@
       "source": [
         "datos.sample(10)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1154,7 +1154,7 @@
         "\n",
         "mdt.head(3)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1551,7 +1551,7 @@
         "X = mdt\r\n",
         "y = datos['publicacion']"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1580,7 +1580,7 @@
         "print('titulos en el conjunto de entrenamiento: {}'.format(X_train.shape[0]))\n",
         "print('titulos en el conjunto de prueba: {}'.format(X_test.shape[0]))"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1606,7 +1606,7 @@
         "#proporción de emails por clase en el conjunto de entrenamiento\n",
         "y_train.value_counts(normalize=True)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1637,7 +1637,7 @@
         "#proporción de emails por clases en el conjunto de prueba\n",
         "y_test.value_counts(normalize=True)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1687,7 +1687,7 @@
         "clasificador = MultinomialNB()\n",
         "clasificador.fit(X_train, y_train)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1715,7 +1715,7 @@
       "source": [
         "clasificador.classes_"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1757,7 +1757,7 @@
         "print(clasificador.feature_count_.shape)\r\n",
         "clasificador.feature_count_"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1807,7 +1807,7 @@
         "print(clasificador.feature_log_prob_.shape)\r\n",
         "clasificador.feature_log_prob_"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1857,7 +1857,7 @@
         "\r\n",
         "np.log(1/(sum_palabras_startup+ len(terminos)))"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1888,7 +1888,7 @@
         "\r\n",
         "np.log(1/(sum_palabras_tds + len(terminos)))"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1918,7 +1918,7 @@
         "for p in clasificador.feature_log_prob_.argsort()[0,-10:]:\r\n",
         "  print(terminos[p])"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1952,7 +1952,7 @@
         "for p in clasificador.feature_log_prob_.argsort()[1,-10:]:\r\n",
         "  print(terminos[p])"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1989,7 +1989,7 @@
       "source": [
         "y_pred = clasificador.predict(X_test)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2013,7 +2013,7 @@
         "sns.heatmap(confusion_matrix, annot=True, fmt='g')\n",
         "plt.show()"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2045,7 +2045,7 @@
         "                                 left_index=True, right_index= True)\r\n",
         "resultados_prediccion.head(3)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2125,7 +2125,7 @@
         "#artículos mal clasificados\r\n",
         "resultados_prediccion[resultados_prediccion['Y_Real']!=resultados_prediccion['Y_Prediccion']]"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2263,7 +2263,7 @@
       "source": [
         "resultados_prediccion.loc[2682,'descripcion']"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
