Creado mediante Colaboratory

--- a/Semana 4/ Demostración_Probabilidad_de_un_muestreo_variable_Bernoulli.ipynb
+++ b/Semana 4/ Demostración_Probabilidad_de_un_muestreo_variable_Bernoulli.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Probabilidad de un muestreo de una variable con distribución Bernoulli.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNLKkg7rOEOUJPzS6Kz5l+i",
+      "authorship_tag": "ABX9TyOr9OMRzCJg3QjsLr5Wy286",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         "\r\n",
         "print('Elementos de la muestra: \\n{}'.format(muestra))\r\n"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +90,7 @@
       "source": [
         "0.3 * 0.3 * 0.3 * 0.3 * 0.3 * 0.7 * 0.7 * 0.7 * 0.7 * 0.7"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -129,7 +129,7 @@
       "source": [
         "(0.3**5)*(0.7**5)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -153,7 +153,7 @@
       "source": [
         "que es lo mismo que:\r\n",
         "\r\n",
-        "$P(S)= (\\sum_{i\\leq{N}}x_i)~log(\\beta^*) + (\\sum_{i\\leq{N}}(1-x_{i}))~ log(1-\\beta^*)$\r\n"
+        "$log(P(S))= (\\sum_{i\\leq{N}}x_i)~log(\\beta^*) + (\\sum_{i\\leq{N}}(1-x_{i}))~ log(1-\\beta^*)$\r\n"
       ]
     },
     {
@@ -168,7 +168,7 @@
       "source": [
         "(5*np.log(.30)+5*np.log(.7))\r\n"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -196,7 +196,7 @@
       "source": [
         "np.exp(5*np.log(.30)+5*np.log(.7))"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -224,7 +224,7 @@
       "source": [
         "np.exp(3*np.log(.30)+7*np.log(.7))"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,7 +252,7 @@
       "source": [
         "np.exp(7*np.log(.30)+3*np.log(.7))"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
