Creado mediante Colaboratory

--- a/Semana 4/ Demostración_Probabilidad_de_un_muestreo_variable_Bernoulli.ipynb
+++ b/Semana 4/ Demostración_Probabilidad_de_un_muestreo_variable_Bernoulli.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Probabilidad de un muestreo de una variable con distribución Bernoulli.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOr9OMRzCJg3QjsLr5Wy286",
+      "authorship_tag": "ABX9TyNJdi2XjAVMK0x1qa6+bKOC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,24 +85,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aizq7_xUAocc",
-        "outputId": "3d09d467-99b0-49ac-f922-e485ad06f27e"
+        "outputId": "a449ba23-b737-4f10-ff12-41c016746c7a"
       },
       "source": [
-        "0.3 * 0.3 * 0.3 * 0.3 * 0.3 * 0.7 * 0.7 * 0.7 * 0.7 * 0.7"
+        "0.3 * 0.7 * 0.7 * 0.7 * 0.3 * 0.3 * 0.3 * 0.7 * 0.3 * 0.3"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.0004084100999999999"
+              "0.00017503289999999994"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 1
         }
       ]
     },
@@ -124,24 +124,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MLl1Fc7AAM4h",
-        "outputId": "1b5b5879-4639-4200-a938-dad69a90466e"
+        "outputId": "44282bde-a5dd-4103-d630-420dd4ff4d42"
       },
       "source": [
-        "(0.3**5)*(0.7**5)"
+        "(0.3**6)*(0.7**4)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.00040841009999999976"
+              "0.00017503289999999991"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 2
         }
       ]
     },
@@ -153,8 +153,19 @@
       "source": [
         "que es lo mismo que:\r\n",
         "\r\n",
-        "$log(P(S))= (\\sum_{i\\leq{N}}x_i)~log(\\beta^*) + (\\sum_{i\\leq{N}}(1-x_{i}))~ log(1-\\beta^*)$\r\n"
+        "$P(S)= (\\sum_{i\\leq{N}}x_i)~log(\\beta^*) + (\\sum_{i\\leq{N}}(1-x_{i}))~ log(1-\\beta^*)$\r\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FktWIfgloG9P"
+      },
+      "source": [
+        "import numpy as np"
+      ],
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -163,24 +174,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K2fB5r0l9SgY",
-        "outputId": "a0708dfe-220b-498a-fdac-4bf483072661"
+        "outputId": "68285c79-17e3-4193-9cbf-3adcc29d2e07"
       },
       "source": [
-        "(5*np.log(.30)+5*np.log(.7))\r\n"
+        "(6*np.log(.30)+4*np.log(.7))\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "-7.803238741323343"
+              "-8.650536601710547"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 5
         }
       ]
     },
@@ -191,25 +202,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r3dvxZTF8v9W",
-        "outputId": "7e9cc4a4-8784-42e3-bb19-b5902809d542"
+        "outputId": "cb7633bf-3aba-472c-ec4b-aa13063f7a07"
       },
       "source": [
-        "np.exp(5*np.log(.30)+5*np.log(.7))"
+        "np.exp(6*np.log(.30)+4*np.log(.7))"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.0004084100999999997"
+              "0.00017503289999999975"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 95
+          "execution_count": 6
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D5DTmFohoW94"
+      },
+      "source": [
+        "Compare las probabilidades de obtener las muestras siguientes, de una variable aleatoria con la misma distribución bernoulli (P_exito=3):"
       ]
     },
     {
@@ -219,12 +239,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dAYBisMglxSL",
-        "outputId": "194d5ec3-c172-47e4-b959-f299eb5c69a4"
+        "outputId": "296e480a-0522-4b20-bee9-57edabe72bca"
       },
       "source": [
+        "# 3 éxitos, 7 fracasos\r\n",
         "np.exp(3*np.log(.30)+7*np.log(.7))"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -236,7 +257,36 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 97
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X_NpYuW_oQz6",
+        "outputId": "e8836813-131a-43cc-b9f3-b1b7210c285c"
+      },
+      "source": [
+        "# 5 éxitos, 5 fracasos\r\n",
+        "np.exp(5*np.log(.30)+5*np.log(.7))"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.0004084100999999997"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
         }
       ]
     },
@@ -247,12 +297,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vofk6HCEl4R2",
-        "outputId": "d94d2267-32e4-4c16-cc7a-1f05160e2251"
+        "outputId": "e9b2167c-14a7-400a-af0f-6a51c23b9c69"
       },
       "source": [
+        "# 7 éxitos, 3 fracasos\r\n",
         "np.exp(7*np.log(.30)+3*np.log(.7))"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -264,7 +315,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 98
+          "execution_count": 10
         }
       ]
     }
