--- a/Semana 4/ Demostración_Probabilidad_de_un_muestreo_variable_Bernoulli.ipynb
+++ b/Semana 4/ Demostración_Probabilidad_de_un_muestreo_variable_Bernoulli.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Probabilidad de un muestreo de una variable con distribución Bernoulli.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNJdi2XjAVMK0x1qa6+bKOC",
+      "authorship_tag": "ABX9TyO6H8QtCSqpwGaxgPf5JUW1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,6 +70,44 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "U93bWg1Jp4Oy"
+      },
+      "source": [
+        "# Vamos a calcular la probabilidad de obtener la siguiente muestra"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r3F8gqoZpcQs",
+        "outputId": "8eab2502-b8f8-492f-fe87-8ae053d30e25"
+      },
+      "source": [
+        "muestra = [1,0, 0, 0, 1, 1, 1, 0, 1, 1]\r\n",
+        "muestra"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 0, 0, 0, 1, 1, 1, 0, 1, 1]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Vdg-JZ81F07Q"
       },
       "source": [
@@ -85,12 +123,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aizq7_xUAocc",
-        "outputId": "a449ba23-b737-4f10-ff12-41c016746c7a"
+        "outputId": "660d7061-a002-4dbb-f4f8-e284701ad0ed"
       },
       "source": [
         "0.3 * 0.7 * 0.7 * 0.7 * 0.3 * 0.3 * 0.3 * 0.7 * 0.3 * 0.3"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -102,7 +140,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 1
+          "execution_count": 2
         }
       ]
     },
@@ -124,12 +162,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MLl1Fc7AAM4h",
-        "outputId": "44282bde-a5dd-4103-d630-420dd4ff4d42"
+        "outputId": "acf5b510-e419-4775-cd33-9acefb99661c"
       },
       "source": [
         "(0.3**6)*(0.7**4)"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +179,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -159,22 +197,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FktWIfgloG9P"
-      },
-      "source": [
-        "import numpy as np"
-      ],
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "K2fB5r0l9SgY",
-        "outputId": "68285c79-17e3-4193-9cbf-3adcc29d2e07"
+        "outputId": "138854e2-4dd3-451f-a6ce-73c5220d41f3"
       },
       "source": [
         "(6*np.log(.30)+4*np.log(.7))\r\n"
@@ -202,7 +229,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r3dvxZTF8v9W",
-        "outputId": "cb7633bf-3aba-472c-ec4b-aa13063f7a07"
+        "outputId": "89ddb8cf-8e5b-4016-9bef-730865e58345"
       },
       "source": [
         "np.exp(6*np.log(.30)+4*np.log(.7))"
@@ -239,7 +266,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dAYBisMglxSL",
-        "outputId": "296e480a-0522-4b20-bee9-57edabe72bca"
+        "outputId": "d6bae134-1213-4ffb-b3fb-b12c3fa2310c"
       },
       "source": [
         "# 3 éxitos, 7 fracasos\r\n",
@@ -268,7 +295,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X_NpYuW_oQz6",
-        "outputId": "e8836813-131a-43cc-b9f3-b1b7210c285c"
+        "outputId": "2786d31e-917d-446a-c677-900c89bc1fc0"
       },
       "source": [
         "# 5 éxitos, 5 fracasos\r\n",
@@ -297,13 +324,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vofk6HCEl4R2",
-        "outputId": "e9b2167c-14a7-400a-af0f-6a51c23b9c69"
+        "outputId": "06f7b852-231e-448c-c75a-b6c2c78a3572"
       },
       "source": [
         "# 7 éxitos, 3 fracasos\r\n",
         "np.exp(7*np.log(.30)+3*np.log(.7))"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -315,7 +342,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     }
