Creado mediante Colaboratory

--- a/Semana 1/1_4_5_Explicando_hiperplanos_en_3D.ipynb
+++ b/Semana 1/1_4_5_Explicando_hiperplanos_en_3D.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOaSIDttRiu7ADitdEZ7lXf",
+      "authorship_tag": "ABX9TyM+91ubtTQGb0uXB0CQqz5o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AnIsAsPe/Fundamentos-tecnicos-y-aplicaciones-ML/blob/main/03_5_Explicando_hiperplanos_en_3D.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AnIsAsPe/Fundamentos-tecnicos-y-aplicaciones-ML/blob/main/Semana%201/1_4_5_Explicando_hiperplanos_en_3D.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -85,7 +85,7 @@
           "height": 356
         },
         "id": "5zQmSHUScSZp",
-        "outputId": "8c8c63eb-b5e6-43f2-d1b5-e3db318b517f"
+        "outputId": "f97fffab-d39d-49f2-f983-d00ab274e016"
       },
       "source": [
         "fig = plt.figure(figsize = (8, 6))\n",
@@ -156,7 +156,7 @@
           "height": 356
         },
         "id": "6mA3oTIZVy4O",
-        "outputId": "020f0f22-6e2c-4df7-edba-544797972694"
+        "outputId": "d12d9f28-c13a-4548-9974-07b09ce64af9"
       },
       "source": [
         "fig = plt.figure(figsize = (8, 6))\r\n",
@@ -197,7 +197,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kYIDvlCeV6T9",
-        "outputId": "fa0b6e78-b2a6-467d-fde8-086c6f5415f6"
+        "outputId": "2df212cc-3505-4d00-f88a-c5ba5246ae87"
       },
       "source": [
         "x"
@@ -225,7 +225,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6Rg6hl27V7iO",
-        "outputId": "bc515be6-3ba6-401b-971a-3a8d8216b68d"
+        "outputId": "8919fa42-51fe-4aed-a382-3de72f0f1b90"
       },
       "source": [
         "y"
@@ -254,7 +254,7 @@
       "source": [
         "X, Y = np.meshgrid( x, y)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -270,7 +270,7 @@
         "Z = 0*X + 0*Y\r\n",
         "Z"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -310,7 +310,7 @@
         "\n",
         "plt.show()\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -335,20 +335,8 @@
       "source": [
         "# A discutir:\r\n",
         "\r\n",
-        "¿Cuántos puntos necesitamos para dibujar cada superficie plana?"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "JuHX2qZeG19P"
-      },
-      "source": [
-        "# Tarea: \r\n",
-        "¿Cuál es la intersección entre el plano de la ecuación 1 y el de la 3?\r\n",
-        "¿Cuál es la intersección entre el plano de la ecuación 2 y el de la 3?\r\n",
-        "\r\n",
-        "Graficar las tres rectas de intersección y el punto donde cruzan (que es la solución del sistema de ecuaciones)"
+        "¿Cuántos puntos necesitamos para dibujar cada superficie plana?\r\n",
+        "¿Qué representación gráfica tiene la intersección de dos planos?"
       ]
     }
   ]
