Creado mediante Colaboratory

--- a/Semana 1/1_4_Ecuaciones_lineales_y_sistemas_de_ecuaciones.ipynb
+++ b/Semana 1/1_4_Ecuaciones_lineales_y_sistemas_de_ecuaciones.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOx4/b6k+y61yX+pP3qLRmU",
+      "authorship_tag": "ABX9TyNxiS43s380pNrJkOPasUrG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "import matplotlib.pyplot as plt\n",
         "from mpl_toolkits.mplot3d import Axes3D"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +73,7 @@
         "plt.plot(x, y)\n",
         "plt.show()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -216,7 +216,7 @@
         "plt.plot(X, Y,'bo')\r\n",
         "plt.show()"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -259,7 +259,7 @@
         "\r\n",
         "plt.show()\r\n"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -353,13 +353,13 @@
         "def solucion_ecuaciones_2D(A1, B1, C1, A2, B2, C2):\r\n",
         "    '''soluciona un sistema de dos ecuaciones con dos incónitas. \r\n",
         "    Cada ecuación debe estar ordenada de la siguiente forma:\r\n",
-        "    Ay + Bx = C'''\r\n",
+        "    Ax + By = C'''\r\n",
         "    M = np.array([[A1, B1], [A2, B2]])\r\n",
         "    b = np.array([C1, C2])\r\n",
         "    solucion = np.linalg.solve(M, b)\r\n",
         "    return solucion"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -374,7 +374,7 @@
       "source": [
         "solucion_ecuaciones_2D(-3,1,4,2,1,1)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -469,7 +469,8 @@
       "source": [
         "def solucion_grafica_2D(A1, B1, C1, A2, B2, C2):\n",
         "    '''Solución gráfica a un sistema de dos ecuaciones\n",
-        "    y = (C - Ax)/B'''\n",
+        "    Cada ecuación debe estar ordenada de la siguiente forma:\n",
+        "    Ax + By = C'''\n",
         "\n",
         "    solucion = solucion_ecuaciones_2D(A1, B1, C1, A2, B2, C2)\n",
         "    lim = 2 * solucion[np.argmax(solucion)]\n",
@@ -504,7 +505,7 @@
         "\n",
         "    return solucion[0], solucion[1]\n"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -766,7 +767,7 @@
         "\r\n",
         "print('a = {:.1f} \\nb = {:.1f} \\nc = {:.1f} \\nd = {:.1f}'.format(a, b, c, d))"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
